--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
+h1 { font-family: "Helvetica Neue"; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 26.4px; } h3 { font-family: "Helvetica Neue"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: "Helvetica Neue"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: "Helvetica Neue"; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: "Helvetica Neue"; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
+
+
 html {
     font-size:16px;
+
 }
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Helvetica Neue; 
 }
 
 img{
@@ -16,7 +21,9 @@ a{
     color:currentColor;
     text-decoration: none;
 }
-
+#jumbo {
+    
+}
 .container {
     max-width: 1024px;
     margin:0 auto;
@@ -80,7 +87,7 @@ padding-right: 0;
 }
 .debug #main-content .container{
     /* min-height: 500px; */
-    background-color: rgb(175, 165, 238,0.2);
+    /* background-color: rgb(175, 165, 238,0.2); */
 }
 
 .debug .row{
@@ -102,13 +109,52 @@ header{
     height: 72px;
 }
 #nav-list {
-    padding-top: 45px;
+    padding:45px 0 45px 0;
 }
 
 #nav-list li{
+    font-weight: 300;
     text-transform: uppercase;
     list-style: none;
     display: inline;
     color: gray;
     margin-right:10px;
+}
+
+/* JUMBO */
+
+#jumbo.container{
+    border-radius: 20px;
+}
+.bkg-wrapper{
+    position: relative;
+    background-image:url(./img/banner.jpg);
+    background-repeat: no-repeat;
+    background-position:top;
+    background-position-y: -60px;
+   max-width: 100%;
+   height: 501px;
+   border-radius: 20px;
+   color: white;
+
+}
+.bkg-wrapper:after{
+    content: "";
+    display: block;
+    background-color: rgba(0,0,0,0.3);
+    position:absolute;
+    top: 0;
+    right: 0;
+    bottom:0;
+    left: 0;
+    overflow: hidden;
+    border-radius: 20px;
+
+}
+.testo-jumbo{
+    bottom:70px ;
+    left:70px;
+    position: absolute;
+   max-width: 500px;
+    z-index: 9999;
 }
