--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ a{
 }
 .row [class^="col-"]{
     float: left;
-    padding: 0 15px;
+    /* padding: 0 15px; */
 }
 .row [class^="col-"]:first-child{
 
@@ -48,10 +48,12 @@ padding-right: 0;
 }
 .col-6{
     width: 50%;
+    padding: 0 15px;
 }
 
 .col-3{
     width: 25%;
+    position: relative;
 }
 
 .col-12{
@@ -60,15 +62,15 @@ padding-right: 0;
     /* debug rules */
 
 .module{
-    padding: 20px;
+    /* padding: 20px; */
     background-color: rgb(57, 233, 124);
     border-radius: 5px;
     color: white;
 }
-.debug header .container{
+/* .debug header .container{
     background-color: rgb(160, 68, 247,0.2);
     /* padding: 20px; */
-}
+} */
 
 .debug section {
     border:1px solid;
@@ -90,9 +92,9 @@ padding-right: 0;
     /* background-color: rgb(175, 165, 238,0.2); */
 }
 
-.debug .row{
+/* .debug .row{
     border: 4px double red;
-    padding: 20px;
+    padding: 20px; */
 }
 .debug .row [class^="col-"] {
     border:2px solid brown;
@@ -157,4 +159,55 @@ header{
     position: absolute;
    max-width: 500px;
     z-index: 9999;
+}
+
+/* TITOLO SECONDA SEZIONE */
+
+.module-title{
+    padding: 40px 0;
+    color: black;
+}
+
+.col-12 .module-title p{
+    color: grey;
+}
+
+/* SECONDA SEZIONE */
+
+ 
+.module-img-sm{
+    position: relative;
+    max-width: 235px;
+    max-height: 204px; 
+}
+.col-3 .module-img-sm img{
+    object-position: center;
+    object-fit: cover; 
+     width: 100%;
+    height: 204px;
+}
+.col-6 .module-img-bg img{
+    object-position: center;
+    width: 100%;
+    height: 204px;
+    object-fit:cover;   
+    
+    
+
+}
+.overlay{
+    object-position: center;
+   
+    width: 235px;
+    height: 204px;
+    max-width: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+}
+    
+
+
+.module-img-sm:hover .overlay{
+    visibility:hidden ;
 }
