--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 h1 { font-family: "Helvetica Neue"; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 26.4px; } h3 { font-family: "Helvetica Neue"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: "Helvetica Neue"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: "Helvetica Neue"; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: "Helvetica Neue"; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
 
-
+main img {
+    border-radius: 20px;
+}
 html {
     font-size:16px;
 
@@ -27,7 +29,7 @@ a{
 .container {
     max-width: 1024px;
     margin:0 auto;
-    border:2px dashed rgb(23, 23, 245,0.2);
+    /* border:2px dashed rgb(23, 23, 245,0.2); */
 }
 .row::after{
     content: "";
@@ -63,9 +65,9 @@ padding-right: 0;
 
 .module{
     /* padding: 20px; */
-    background-color: rgb(57, 233, 124);
+    /* background-color: rgb(57, 233, 124); */
     border-radius: 5px;
-    color: white;
+    color: grey;
 }
 /* .debug header .container{
     background-color: rgb(160, 68, 247,0.2);
@@ -205,9 +207,23 @@ header{
     top:0;
     left:0;
 }
-    
+.module{
+    padding-top:20px;
+}    
 
 
 .module-img-sm:hover .overlay{
     visibility:hidden ;
+}
+/* FOOTER */
+
+footer span{
+    
+    color: red;
+
+}
+
+footer .container {
+    padding:60px;
+    text-align: center;
 }
